--- a/sass/navigation.scss
+++ b/sass/navigation.scss
@@ -100,6 +100,7 @@ li a.active {
   float:left;
   width:100%;
   font-family: $muli;
+  padding-top: 10px;
   .menu {
     width:100%;
     display:table;
